css changes to nextButton

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div id="currentQuestion"></div>
     <div id="choices"></div>
     <div id="message"></div>
-    <div id="nextButton"></div>
+    <div id="nextButton">test</div>
   </div>
 </div>
 
@@ -130,7 +130,7 @@ $(document).ready()
             value = $('input[type="radio"]:checked').val();
 
             if(value == undefined) {
-                $(document).find('quiz')
+                $(document).find('message').text("Hey butthead! I gotta have time to recopy. Do have any idea what would happen if I turned <i>my</i> homework in <i>your</i> handwriting? (Please make a selection)")
 
 
             }})
