added last function

--- a/index.html
+++ b/index.html
@@ -199,7 +199,9 @@ function displayScore() {
     $(document).find('panel-body' > '#score').show();
 }
 
-
+function hideScore() {
+    $(document).find('#score').hide();
+}
 
 
 // var n = 30;
