--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 
 <meta charset="utf-8">
 
+<!-- Viewport tag -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<!-- bootstrap CDN -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-<link rel="stylesheet" type="text/css" href="style.css">
+<!-- Style sheet link -->
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 
 
@@ -49,175 +50,7 @@
 </div>
 
 
-
-
-
-
-
 <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-
-
-<script type="text/javascript">
-	
-
-
-var quiz = [
-{
-    "Question": "What is printed on the license plate of the time traveling Delorean?",
-    "Choices": ["SCIENCE", "TIMETRVL", "OUTATIME", "TIME2GO"],
-    "Answer": "OUTATIME"
-
-},
-{
-    "Question": "In the first Back to the Future movie, which shopping mall does Marty meet Doc at?",
-    "Choices": ["Big Fur", "Twin Pines", "Wild Oak", "Hill Valley"]
-    "Answer": "Twin Pines"
-},
-{
-    "Question": "What date does Doc take Marty and Jennifer to in BTTF 2?"
-    "Choices": ["Sept. 22nd, 2015", "Nov. 8th, 2015", "Dec. 1st, 2015", "Oct. 21st, 2015"]
-    "Answer": "Oct 21st, 2015"
-},
-{
-    "Question": "What is the name of the cafe Marty is suppose to meet Griff at in 2015? "
-    "Choices": ["Cafe Future", "Cafe 80's", "Space Age Cafe", "Jigowatt Cafe"]
-    "Answer": "Cafe 80's"
-},
-{
-    "Question": "What does Biff run into with his car after chasing Marty around the Hill Valley square? "
-    "Choices": ["Manure", "Garbage", "Dirt", "Mr. Strictland's car"]
-    "Answer": "Manure"
-},
-{
-    "Question": "How much electricity is require to power the Flux Capacitor (which makes time travel possible)?"
-    "Choices": ["1.21 milliwatts", "1.21 terrawatts", "1.21 jigowatts", "1.21 gigawatts"]
-    "Answer": "1.21 jigowatts"
-},
-{
-    "Question": "What the hell is a jigowatt?"
-    "Choices": ["I don't know.", "I don't care", "A jigowatt is really a gigawatt that was mispelled, and mispronounced by the movie's producers Robert Zemeckis and Bob Gale.", "1 billion watts."]
-    "Answer": "A jigowatt is really a gigawatt that was mispelled, and mispronounced by the movie's producers Robert Zemeckis and Bob Gale."
-},
-{
-    "Question": "What is Doc Brown's dog's name in the year 1955?"
-    "Choices": [ "Einstien", "Galalleo", "Newton", "Capurnicus"]
-    "Answer": "Capurnicus"
-},
-{
-    "Question": "What is the name of George McFly's book at the end of the first movie?"
-    "Choices": ["An Alien Named Darth", "A Match Made In Time", "A Match Made In Space", "My Homework, Your Handwriting"]
-    "Answer": "A Match Made In Space"
-},
-{
-    "Question": "Who was originally cast to play the role of Marty McFly?"
-    "Choices": ["Crispin Glover", "Eric Stoltz", "Robert Downey Jr.", "Tom Criuse"]
-    "Answer": "Eric Stoltz"
-}
-]
-
-
-var currentQuestion = 0;
-var correctAnswers = 0;
-var quizEnd = false;
-
-$(document).ready()
-
-    displayCurrentQuestion();
-    $(this).find('#message').hide();
-
-    $(this).find('#nextButton').on('click', function () 
-        if (!quizEnd) {
-
-            value = $('input[type="radio"]:checked').val();
-
-            if(value == undefined) {
-                $(document).find('#message').text("Hey butthead! Do have any idea what would happen if I turned <i>my</i> homework in <i>your</i> handwriting? (Please make a selection)")
-
-                $(document).find('#message').show();
-            }else{
-                $(document).find('#message').hide();
-
-            if (value == quiz[currentQuestion].correctAnswers) {
-                correctAnswers++;
-            }
-
-            currentQuestion++;
-
-            if (currentQuestion < quiz.length) {
-                displayCurrentQuestion
-
-            }else{
-                displayScore();
-                $(document).find('#nextButton').text('Great Scott! Let\'s go again.');
-                quizOver = true;
-               } 
-
-            }else{
-                quizOver = false;
-                $(document).find('#nextButton').text("Next Question");
-                resetQuiz();
-                displayCurrentQuestion();
-                hideScore();
-            }
-
-        }
-    });
-
-function displayCurrentQuestion() {
-    console.log('display current question')
-
-    var question = question[currentQuestion].question;
-    var questionClass = $(document).find('.panel-body' > '#currentQuestion');
-    var choices  = $(document).find('.panel-body' > '#choices');
-    var numChoices = quiz[currentQuestion].choices.length;
-
-
-    $(questionClass).text(question);
-
-
-    $(choices).find('li').remove();
-
-
-    var choice;
-    for (i = 0; i < numChoices; i++) {
-        choice = quiz[currentQuestion].choices[i];
-        $('<li><input type="radio" value=' + i + 'name="dynradio" />' + 
-            choice + '<li>').appendTo(choices);
-
-    }
-}
-
-function resetQuiz() {
-    currentQuestion = 0;
-    correctAnswers = 0;
-    hideScore();
-}
-
-function displayScore() {
-    $(document).find('.panel-body' > '#score').text("You scored " + 
-        correctAnswers + "out of: " + quiz.length);
-    $(document).find('panel-body' > '#score').show();
-}
-
-function hideScore() {
-    $(document).find('#score').hide();
-}
-
-
-// var n = 30;
-// setTimeout(countDown,1500);
-
-// function countDown(){
-//    n--;
-//    if(n > 0){
-//       setTimeout(countDown,1500);
-//    }
-//    document.getElementById("timer")innerHTML = (n);
-// }
-
-
-
-</script>
 
 
 </div>
